Wrapping fixes

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -57,6 +57,7 @@
 .breadcrumb
   background-color: inherit
   margin-left: 108px
+  margin-bottom: 0px
 
 .navbar-brand
   img
